tests/init/neg/soundness4.scala
class Foo {
  val a : Foo = this.a.a  // error
}